--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hot-toast": "^2.0.0",
-    "react-rewards": "^1.1.2"
+    "react-hot-toast": "^2.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.5",
