--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "0.0.14",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
+    "party-js": "^2.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.0.0"
