--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "apollo-upload-client": "^15.0.0",
+    "deepmerge": "^4.2.2",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
+    "lodash.isequal": "^4.5.0",
     "next": "10.2.2",
     "next-pwa": "^5.2.21",
     "next-themes": "0.0.14",
@@ -33,6 +35,7 @@
     "@testing-library/react": "^11.2.7",
     "@types/apollo-upload-client": "^14.1.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^15.12.4",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.11",
