--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "generate": "graphql-codegen --config src/apollo/codegen.json"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.7",
+    "@apollo/client": "^3.4.8",
     "apollo-upload-client": "^15.0.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "lodash.isequal": "^4.5.0",
-    "next": "10.2.2",
-    "next-pwa": "^5.2.24",
+    "next": "^11.1.0",
+    "next-pwa": "^5.3.1",
     "next-themes": "0.0.14",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
@@ -39,8 +39,8 @@
     "@types/node": "^15.14.7",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.3.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
@@ -50,7 +50,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-tailwindcss": "^1.14.1",
+    "eslint-plugin-tailwindcss": "^1.14.3",
     "jest": "^26.6.3",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
